--- a/style.css
+++ b/style.css
@@ -1,132 +1,140 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+/* all tag */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    background: whitesmoke;
+/* body tag */
+body {
+  background: whitesmoke;
 }
 
-
-
-.header{
-    background-color: #f9fbd0;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    position: sticky;
-    top: 0;
-    left: 0;
+/* header section */
+.header {
+  background-color: #f9fbd0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 
-.navbar-header{
-    max-width: 1300px;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-
-    width: 100%;
+/* navbar header */
+.navbar-header {
+  max-width: 1300px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
-.title-header{
-    font-size: 2rem;
-    margin-top: 4px;
+/* title header */
+.title-header {
+  font-size: 2rem;
+  margin-top: 4px;
 }
 
-#search-input{
-    width: 350px;
-    height: 1.8rem;
-    padding: 20px;
-    border-radius: 5px;
-    border: 0;
-    outline: 0;
-    margin: 10px 0 25px;
+/* search input */
+#search-input {
+  width: 350px;
+  height: 1.8rem;
+  padding: 20px;
+  border-radius: 5px;
+  border: 0;
+  outline: 0;
+  margin: 10px 0 25px;
 }
 
+/* search input when focus */
 #search-input:focus {
-    border: 2px solid #e0d100;
+  border: 2px solid #e0d100;
 }
 
-
-
-.filter{
-    display: flex;
-    justify-content: space-around;
-    width: 50%;
-    margin-bottom: 10px;
+/* filter section */
+.filter {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  margin-bottom: 10px;
 }
 
+/* filter btns */
 .filter button {
-    background-color: #f9fbd0;
-    border: 1px solid #c5b800;
-    border-radius: 5px;
-    padding: 10px 20px;
-    width: fit-content;
+  background-color: #f9fbd0;
+  border: 1px solid #c5b800;
+  border-radius: 5px;
+  padding: 10px 20px;
+  width: fit-content;
 }
 
-.filter button:hover{
-    transition: all .2s linear;
-    background-color: #dfd000;
-    border: 1px solid #a39800;
+/* filter btns when hover */
+.filter button:hover {
+  transition: all 0.2s linear;
+  background-color: #dfd000;
+  border: 1px solid #a39800;
 }
 
-
-.main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 1000px;
-    width: 100%;
-    margin: 100px auto;
+/* main */
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 1000px;
+  width: 100%;
+  margin: 100px auto;
 }
 
-.products{
-    text-align: center;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-    row-gap: 100px;
-    column-gap: 60px;
-    align-content: center;
-    width: 100%;
-    margin-top: 50px;
+/* products container */
+.products {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  row-gap: 100px;
+  column-gap: 60px;
+  align-content: center;
+  width: 100%;
+  margin-top: 50px;
 }
 
-
-
-    
-.product{
-    background-color: #f9fbd0;
-    border-bottom-right-radius: 7px;
-    border-bottom-left-radius: 7px;
-    text-align: center;
-    margin: 0 20px;
-    transition: all .3s ease-in-out;
-}
-.product:hover{
-    transform: translateY(-5%);
+/* every product */
+.product {
+  background-color: #f9fbd0;
+  border-bottom-right-radius: 7px;
+  border-bottom-left-radius: 7px;
+  text-align: center;
+  margin: 0 20px;
+  transition: all 0.3s ease-in-out;
 }
 
-.img-product img{
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    width: 100%;
-    height: 200px;
-    background: white;
+/* every product when hover*/
+.product:hover {
+  transform: translateY(-5%);
 }
 
+/* product img */
+.img-product img {
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  width: 100%;
+  height: 200px;
+  background: white;
+}
+
+/* product description */
 .product-information {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    padding: 10px 20px 20px;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  padding: 10px 20px 20px;
 }
 
-.price-product{
-    color: #c56900;
+/* product price */
+.price-product {
+  color: #c56900;
 }
